test/expected/declare_+o_eq_rck_rk++delete-c++03.out
declare = of structure S as deleted member operator (reference to constant S...
        ^
9: error: "delete" is illegal for operator until C++11
